
If `stats_port' is set to -1 in the config file, opennap will not listen
for stats reporting (by default it listens on port 8889).

Search token filtering is now configurable instead of hard-coded.  opennap
will read the file `filter' in the configuration directory for a list of
words (one per line) that should be skipped when indexing.  A
`sample.filter' file is now included with the distribution.

[opennap 0.35]

added `max_clones' configuration variable to control how many clients may
log into the server from the same ip address.

[opennap 0.34]

added channel mode command (/msg chanserv mode <channel> [mode]) where
mode is one or more of
	+MODERATED	only mods, ops and voiced users can talk
	+INVITE		non-ops/mods must be invited to /join
	+TOPIC		any user in the channel can change the topic
	+PRIVATE	channel does not show up in channel list

added channel voice command: /msg chanserv voice <channel> [user [user ...]]
allows a user to talk in a moderated channel

added channel muzzle command: /msg chanserv muzzle <channel> <user> ["reason"]
muzzles a user in the specified channel only

added channel invite command: /msg chanserv invite <channel> <user>
to allow a user to join a +invite channel

added channel wallop command: /msg chanserv wallop <channel> <text>
to send a message to all ops/mods+ in the specified channel

notifications about changes in channels are now only sent to the ops/mods+ in
that channel rather than to all mods+

removed +TOPIC and +CHANNEL user modes

max nickname length set to 19 to avoid a bug in the windows napster client

[opennap 0.32]

fixes bug in channel_op() which allowed any user to gain channel operator
status on any channel

[opennap 0.31]

added new flags 'z' and 'c' to global user list to display all muzzled and
cloaked users, respetively.

the server config command will now dump all variables if none is specified

added the number of registered user to the stats dump
