@@ -75,6 +75,7 @@ static struct config Vars[] = {
     {"max_clones",VAR_TYPE_INT,UL&Max_Clones,0},
     {"search_timeout",VAR_TYPE_INT,UL&Search_Timeout,180},
     {"stats_port",VAR_TYPE_INT,UL&Stats_Port,8889},
+    {"eject_when_full",VAR_TYPE_BOOL,ON_EJECT_WHEN_FULL,0},
 };
 
 static int Vars_Size = sizeof (Vars) / sizeof (struct config);
