@@ -99,6 +99,11 @@ server_password opensource
 # port to listen on for stats reporting (useful to napigator)
 #stats_port 8889
 
+# when max_connections has been reach, opennap will kick users who aren't
+# sharing files in order to make room for other clients if `eject_when_full'
+# is set to 1 (default: 0)
+#eject_when_full 1
+
 # END of Win32 configuration.  What follows is only for the Unix versions
 
 # if your operating system has a small limit for the maxium amount of data
